--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,5 +65,5 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-auth:4.3.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.0"
     implementation 'com.google.android.material:material:1.8.0'
-
+    implementation 'org.jsoup:jsoup:1.15.4'
 }
